# dev-kit

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logging.toml  pyproject.toml  requirements.txt  settings.toml
app/: main.py
app/fastapi/: lifespan.py
config/: __init__.py  base.py  database.py
config/database/alembic/: env.py
config/logging/: base.py  log.py
config/logging/helper/: funcs.py
config/settings/: base.py  openapi.py
docs/api/: openapi.yaml
docs/database/: create_db.sql  diagram.dbml
scripts/: test.sh
tests/config/: test_funcs.py
tests/toolkit/parsers/: test_excel_parser.py  test_toml_parser.py
toolkit/: __init__.py
toolkit/api/: __init__.py
toolkit/api/enums/: __init__.py
toolkit/api/exceptions/: __init__.py  custom_exceptions.py
toolkit/api/schemas/: __init__.py
toolkit/database/: __init__.py
toolkit/parsers/: __init__.py  excel_parser.py  toml_parser.py
